# example-jupyter-extension

./: .dockerignore  .gitignore  Cargo.toml  Containerfile  MANIFEST.in  pyproject.toml  readme.md
data/: example-linestring.json  example-mixed.json
python/keplerviz/: magics.py
src/: lib.rs  render.rs  template.html
